Bubble layout: Fix reaction row spacing

--- a/res/css/views/rooms/_BubbleLayout.pcss
+++ b/res/css/views/rooms/_BubbleLayout.pcss
@@ -330,10 +330,8 @@ $left-gutter: 5.4rem;
         flex-direction: row;
         flex-wrap: wrap;
 
-        margin-top: 0;
-        > * {
-            margin-top: 6px;
-        }
+        margin-top: 4px;
+        margin-bottom: 0;
 
         .mx_ReactionsRow_addReactionButton {
             margin-left: unset;
